--- a/config/database.yml
+++ b/config/database.yml
@@ -23,13 +23,13 @@ default: &default
 
 development:
   <<: *default
-  database: sms_app_development
+  database: skeleton-with-foundation_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user that initialized the database.
-  #username: sms_app
+  #username: skeleton-with-foundation
 
   # The password associated with the postgres role (username).
   #password:
@@ -57,7 +57,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: sms_app_test
+  database: skeleton-with-foundation_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -80,6 +80,6 @@ test:
 #
 production:
   <<: *default
-  database: sms_app_production
-  username: sms_app
-  password: <%= ENV['SMS_APP_DATABASE_PASSWORD'] %>
+  database: skeleton-with-foundation_production
+  username: skeleton-with-foundation
+  password: <%= ENV['SKELETON-WITH-FOUNDATION_DATABASE_PASSWORD'] %>
