--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,13 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
   email: MyString
-  phone: MyString
-  verified: false
+  password: MyString
 
 two:
-  name: MyString
   email: MyString
-  phone: MyString
-  verified: false
+  password: MyString
